[package]
name = "canpsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = {version = "1.4.3", default-features = false}
defmt = { version = "0.3", optional = true }
heapless = "0.7.10"
time = { version = "0.3.5", default-features = false, features = ["macros"] }

[features]
default = ["float"]
float = []
